=== HEAD

* Make association dataset method correctly handle cases where key fields are nil (jeremyevans)

* Handle pure java exceptions that don't support message= when reraising the exception in the jdbc adapter (jeremyevans)

* Add support for :offset_strategy Database option on DB2, with :limit_offset and :offset_fetch values, to disable OFFSET emulation (#1254) (jeremyevans)

* Remove deprecated support for using Bignum class as a generic type (jeremyevans)

=== 4.40.0 (2016-10-28)

* Make column_select plugin not raise an exception if the model's table does not exist (jeremyevans)

* Make dataset_associations plugin correctly handle (many|one)_through_many associations with single join table (jeremyevans) (#1253)

* Add s extension, with adds Sequel::S module that includes private #S method for calling Sequel.expr, including use as refinement (jeremyevans)

* Add symbol_as and symbol_as_refinement extensions so that :column.as(:alias) is treated as Sequel.as(:column, :alias) (jeremyevans)

* Add symbol_aref and symbol_aref_refinement extensions so that :table[:column] is treated as Sequel.qualify(:table, :column) (jeremyevans)

* Add Sequel.split_symbols=, to support the disabling of splitting symbols with double/triple underscores (jeremyevans)

* Make SQL::QualifiedIdentifier convert SQL::Identifier arguments to strings, fixing Sequel[:schema][:table] usage in schema methods (jeremyevans)

* Do not attempt to combine non-associative operators (jeremyevans) (#1246)

* Automatically add NOT NULL to columns when adding primary keys if the database doesn't handle it (jeremyevans)

* Make prepared_statements plugin correctly handle lookup on joined datasets (jeremyevans) (#1244)

* Make Database#tables with :qualify=>true option handle table names with double underscores correctly (jeremyevans) (#1241)

* Add SQL::Identifier#[] and SQL::QualifiedIdentifier#[] for creating qualified identifiers (jeremyevans)
